test-aws/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-d754b1a6",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-f77d1c92"
    },
    {
     "NetworkAclAssociationId": "aclassoc-87bf1efe",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-aaaca281"
    },
    {
     "NetworkAclAssociationId": "aclassoc-84bf1efd",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-3222910f"
    },
    {
     "NetworkAclAssociationId": "aclassoc-3b89c348",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-f88201f4"
    },
    {
     "NetworkAclAssociationId": "aclassoc-85bf1efc",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-5d617e04"
    },
    {
     "NetworkAclAssociationId": "aclassoc-82bf1efb",
     "NetworkAclId": "acl-67851303",
     "SubnetId": "subnet-a73bfed1"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-67851303",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-a34dc3c7"
  }
 ]
}
