test-aws/aws_configs/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-fb4aae9c",
     "RouteTableId": "rtb-da443ebe"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-da443ebe",
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-a88366cc",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-a34dc3c7"
  }
 ]
}
